--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
   <title>node</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <h1>Welcome</h1>
 
-  <ul>
-    <li>Dog</li>
-    <li>cat</li>
-  </ul>
-  
 </body>
 </html>
